--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "photography-portfolio",
+  "name": "wedding-films-site",
   "version": "1.0.0",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview"
   },
+  "type": "module",
   "dependencies": {
+    "@chakra-ui/svelte": "^0.10.6",
+    "@emotion/css": "^11.11.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@sveltejs/adapter-vercel": "^3.0.0",
     "@sveltejs/kit": "next",
-    "@chakra-ui/svelte": "^0.9.2",
-    "svelte": "^3.0.0"
+    "svelte": "^4.2.0"
   },
   "devDependencies": {
-    "vite": "^4.0.0"
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.24",
+    "svelte-preprocess": "^5.1.2",
+    "vite": "^5.2.0"
   }
 }
